--- a/flaskweb/templates/register.html
+++ b/flaskweb/templates/register.html
@@ -21,29 +21,28 @@
       <p>Please provide login details</p>
       <div class="form-group">
         <label class="form-label" for="username">Username</label>
-        <input class="form-control" id="username" type="text"
+        <input class="form-control" id="username" type="text">
       </div>
     </div>
     <div class="form-section">
       <div class="form-group">
         <label class="form-label" for="password">Password</label>
-        <input class="form-control" id="password" type="password"
+        <input class="form-control" id="password" type="password">
       </div>
     </div>
     <div class="form-section">
       <p>Please provide an email address for password reset emails</p>
       <div class="form-group">
         <label class="form-label" for="email">Email</label>
-        <input class="form-control" id="email" type="email"
+        <input class="form-control" id="email" type="email">
       </div>
     </div>
 
     <div class="form-section">
       <div class="form-group">
-        <fieldset>
           <legend class="">Do you need to create a team?</legend>
           <label class="block-label selection-button-radio" for="create-team" data-target="create-team-subform">
-           <input id="create-team" type="radio" name="radio-inline-group" value="Yes">
+           <input id="create-team" type="radio" name="create-team" value="Yes">
            Yes
           </label>
           <div class="panel panel-border-narrow js-hidden" id="create-team-subform">
@@ -61,19 +60,15 @@
             </div>
           </div>
           <label class="block-label selection-button-radio" for="select-team" data-target="select-team-subform">
-           <input id="select-team" type="radio" name="radio-inline-group" value="No">
+           <input id="select-team" type="radio" name="create-team" value="No">
            No
           </label>
           <div class="panel panel-border-narrow js-hidden" id="select-team-subform">
             <div class="form-section">
               <div class="form-group">
-                <label class="form-label" for="team-select">Select your team</label>
-                <select class="form-control" id="team-select">
-                  {% for team in teams %}
-                  <option value="3">MBS's Team</option>
-                  <option value="1">My team</option>
-                  {% endfor %}
-                </select>
+                <label class="form-label" for="team-name">Team name</label>
+                <input class="form-control" id="team-name" type=text>
+
               </div>
             </div>
             <div class="form-section">
@@ -83,7 +78,6 @@
               </div>
             </div>
           </div>
-        </fieldset>
       </div>
     </div>
     <div class="form-section">
@@ -91,8 +85,6 @@
         <input class="button" type="submit" value="Register">
       </div>
     </div>
-
   </form>
-  <a class="button button-start" href="/register" role="button">Register</a>
 </main>
 {% endblock %}
