--- a/flaskweb/templates/index.html
+++ b/flaskweb/templates/index.html
@@ -4,6 +4,7 @@
   <h1 class="heading-xlarge">Welcome to the Cross Government CTF</h1>
 <p>Anybody working with Government can take part, simply register each member of your team, and start working on the problems.</p>
 <p>The first user needs to create the team as well</p>
-<a class="button button-start" href="/register" role="button">Register now</a>
+<a class="button button-start" href="/login" role="button">Login</a>
+<a class="button button-start" href="/register" role="button">Register</a>
 </main>
 {% endblock %}
