--- a/flaskweb/templates/login.html
+++ b/flaskweb/templates/login.html
@@ -6,13 +6,13 @@
     <div class="form-section">
       <div class="form-group">
         <label class="form-label" for="username">Username</label>
-        <input class="form-control" id="username" type="text"
+        <input class="form-control" name="username" type="text"
       </div>
     </div>
     <div class="form-section">
       <div class="form-group">
         <label class="form-label" for="password">Password</label>
-        <input class="form-control" id="password" type="password"
+        <input class="form-control" name="password" type="password"
       </div>
     </div>
     <div class="form-section">
